--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hsl-api-task",
+  "name": "godelai-delivery-route-optimizer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
