--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "@apollo/client": "^3.12.9",
     "@react-leaflet/core": "^3.0.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.49.1",
     "@testing-library/react": "^16.2.0",
     "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
@@ -24,6 +27,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.2.0",
     "sass": "^1.84.0"
   },
   "devDependencies": {
@@ -36,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
@@ -47,7 +52,9 @@
     "husky": "^9.0.11",
     "jsdom": "^26.0.0",
     "lint-staged": "^15.2.2",
+    "postcss": "^8.4.35",
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.2.2",
     "typescript-eslint": "^8.23.0",
     "vite": "^6.1.0",
