--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run build:sw && vite build --mode production",
+    "build": "vite build --mode production",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --fix",
     "type-check": "tsc --noEmit",
     "preview": "vite preview",
     "test": "vitest",
-    "precommit": "lint-staged",
-    "build:sw": "tsc -p public/tsconfig.json"
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "@apollo/client": "^3.12.9",
@@ -58,9 +57,7 @@
     "typescript": "~5.2.2",
     "typescript-eslint": "^8.23.0",
     "vite": "^6.1.0",
-    "vite-plugin-pwa": "^0.21.1",
-    "vitest": "^3.0.5",
-    "workbox-window": "^7.3.0"
+    "vitest": "^3.0.5"
   },
   "lint-staged": {
     "*.js": [
